samples/_failures_safe/1761265956_6f7ab1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4bc4fcb3.c: In function ‘tokenize’:
./samples/SAFE/__tmp_4bc4fcb3.c:168:9: error: expected declaration or statement at end of input
  168 |         if (token.type == TOKEN_EOF) {
      |         ^~
./samples/SAFE/__tmp_4bc4fcb3.c:168:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_4bc4fcb3.c:168:9: error: expected declaration or statement at end of input
